tests/error/lessThanInteger-wrong-2nd-argument-unit.uplc
(program 1.0.0[[(builtin lessThanInteger)(con integer 10)](con unit ())])